--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
     .text {
         margin-top: 20px;
         font-size: 3em;
-        background: linear-gradient(45deg, rgb(255, 0, 0), rgb(255, 0, 0), rgb(255, 0, 0));
+        background: linear-gradient(45deg, rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255));
         -webkit-background-clip: text;
         color: transparent; /* النص سيكون شفافًا لأن التدرج هو الذي سيظهر */
-        text-shadow: 0px 0px 8px rgb(255, 0, 0), 
-                    0px 0px 15px #ff0000, 
-                    0px 0px 25px #ff0000;
+        text-shadow: 0px 0px 8px rgb(255, 255, 255), 
+                    0px 0px 15px #ffffff, 
+                    0px 0px 25px #ffffff;
         letter-spacing: 4.5px;
     }
 
@@ -100,12 +100,12 @@
     .info {
         margin-top: 20px;
         font-size: 1.5em;
-        background: linear-gradient(45deg, rgb(223, 0, 0), rgb(255, 0, 0), rgb(255, 0, 0));
+        background: linear-gradient(45deg, rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255));
         -webkit-background-clip: text;
         color: transparent; /* النص سيكون شفافًا لأن التدرج هو الذي سيظهر */
-        text-shadow: 0px 0px 8px #ff0000, 
-                    0px 0px 15px #ff0000, 
-                    0px 0px 25px #ff0000;
+        text-shadow: 0px 0px 8px #ffffff, 
+                    0px 0px 15px #ffffff, 
+                    0px 0px 25px #ffffff;
         letter-spacing: 4.5px;
         white-space: pre-wrap;
     }
@@ -148,7 +148,7 @@
 </video>
 
 <!-- نص فوق الفيديو الأول -->
-<div class="video-text"> Hack By #Abdullah </div>
+<div class="video-text"> Hacked By #Abdullah </div>
 
 <!-- محتوى الصفحة الثانية -->
 <div class="content">
@@ -172,7 +172,7 @@
     <div class="marquee-container">
         <div class="marquee">
             <span>
-                Hack By #Abdullah .gg/byy - Hack By #Abdullah .gg/byy
+             
             </span>
         </div>
     </div>
