--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         margin: 0;
         padding: 0;
         font-family: 'Courier New', Courier, monospace;
-        color: #ff0000;
+        color: #ffffff;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -39,8 +39,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 2em;
-        color: #ff0000;
-        text-shadow: 0px 0px 8px hwb(0 0% 0%), 0px 0px 15px hwb(0 0% 0%), 0px 0px 25px rgb(255, 0, 0);
+        color: #ffffff;
+        text-shadow: 0px 0px 8px hwb(0 100% 0%), 0px 0px 15px hwb(0 100% 0%), 0px 0px 25px rgb(255, 255, 255);
         letter-spacing: 2px;
         animation: blink 1.5s infinite alternate;
         z-index: 1;
@@ -49,7 +49,7 @@
     /* تأثير الوميض */
     @keyframes blink {
         0% { opacity: 1; }
-        100% { opacity: 0.2; }
+        0% { opacity: 0.2; }
     }
 
     /* صفحة المحتوى الثاني */
@@ -126,10 +126,10 @@
     .marquee span {
         display: inline-block;
         font-size: 2em;
-        color: hsl(0, 100%, 50%);
-        text-shadow: 0px 0px 8px #ff0000, 
-                    0px 0px 15px #ff0000, 
-                    0px 0px 25px rgb(255, 0, 0);
+        color: hsl(0, 0%, 100%);
+        text-shadow: 0px 0px 8px #ffffff, 
+                    0px 0px 15px #ffffff, 
+                    0px 0px 25px rgb(255, 255, 255);
         animation: scroll 10s linear infinite;
     }
 
@@ -143,12 +143,12 @@
 
 <!-- الفيديو الأول -->
 <video class="background-video" autoplay muted>
-    <source src="3354ycgwh1.mp4" type="video/mp4">
+    <source src="https://j.top4top.io/m_3260pjgnd1.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
 
 <!-- نص فوق الفيديو الأول -->
-<div class="video-text"> Hacked By #Abdullah </div>
+<div class="video-text"> Hacked By #Abdullah #333 </div>
 
 <!-- محتوى الصفحة الثانية -->
 <div class="content">
@@ -172,7 +172,7 @@
     <div class="marquee-container">
         <div class="marquee">
             <span>
-             
+             Place #333 - .gg/byy - Place #333 - .gg/byy - Place #333 - .gg/byy - Place #333 - .gg/byy - 
             </span>
         </div>
     </div>
